--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -66,11 +66,8 @@ jobs:
 
     steps:
 
-    - name: Restore cached build
-      uses: actions/cache@v3
-      with:
-        key: cached-build-${{github.sha}}
-        path: .
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     # https://github.com/marketplace/actions/maven-dependency-tree-dependency-submission
     - name: Update dependency graph
@@ -84,9 +81,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - name: Restore cached build
+        uses: actions/cache@v3
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          key: cached-build-${{github.sha}}
+          path: .
           
       - name: Set up JDK 17
         uses: actions/setup-java@v3
